# etherminal

./: Cargo.toml  README.md
ranolp.sh-runtime/: Cargo.toml
ranolp.sh-syntax/: Cargo.toml
ranolp.sh-syntax/assets/: grammar.pest
ranolp.sh-syntax/src/: parser.rs
ranolp.sh-telegram-bot/: Cargo.toml
rustbot/: Cargo.toml
rustbot/readymade-builder/: Cargo.toml  README.md
rustbot/readymade-builder/readymade-builder-derive/: Cargo.toml
rustbot/readymade-builder/readymade-builder-derive/src/: lib.rs
rustbot/readymade-builder/src/: lib.rs
rustbot/rustbot-telegram/: Cargo.toml
rustbot/rustbot-telegram/rustbot-telegram-macro/: Cargo.toml  README.md
rustbot/rustbot-telegram/rustbot-telegram-macro/src/: lib.rs  syntax.rs
rustbot/rustbot-telegram/rustbot-telegram-raw-api/: Cargo.toml
rustbot/rustbot-telegram/src/: lib.rs
rustbot/src/: lib.rs
